# carapace

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
carapace/: Cargo.toml  README.md  SPEC.md
carapace-dm/: Cargo.toml
carapace-dm/src/: device.rs  header.rs  lib.rs  loopdev.rs  table.rs  uapi.rs
carapace-import/: Cargo.toml
carapace-import/src/: cow.rs  lib.rs  oci.rs  verity.rs
carapace/ci/: grep-unsafe.sh
carapace/src/: assemble.rs  attach.rs  chain.rs  detach.rs  error.rs  generator.rs  lib.rs  main.rs  name.rs  partition.rs  snapshot.rs  util.rs
carapace/src/boot/: mod.rs  modules.rs  sys.rs
carapace/src/cli/: mod.rs
carapace/src/dm/: device.rs  header.rs  mod.rs  table.rs  uapi.rs
carapace/src/verity/: algorithm.rs  mod.rs  superblock.rs
carapace/tests/: adversary.rs  attach_detach.rs
carapace/tests/common/: mod.rs
carapace/tests/fixtures/: build_carapace.sh
dracut/95carapace/: module-setup.sh
