[package]
name = "carapace-dm"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "device-mapper ioctl layer for carapace (chain-agnostic dm-table + per-device RAII)."

[lints]
workspace = true

[dependencies]
iocuddle = "0.2"
thiserror = { workspace = true }
zerocopy = { workspace = true }
