[package]
name = "carapace-import"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "carapace producer primitives: dm-snapshot COW + dm-verity emission, and OCI image-layout packaging."

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
# Single-consumer deps (producer/OCI side only): declared inline, not shared.
anyhow = "1"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
