[package]
name = "carapace"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
description = "Assemble carapace block-device chains (read) and import raw images into carapace OCI artifacts (produce)."

[lints]
workspace = true

[[bin]]
name = "carapace"
path = "src/main.rs"

# carapace is Linux-only: its whole library and CLI are #![cfg(target_os =
# "linux")] (it drives device-mapper). Gate the deps to Linux too, so a consumer
# that pulls the lib on another target resolves it to an empty crate instead of
# compiling the Linux-only ioctl stack (iocuddle has no std::os::unix on
# Windows). Matches the corium/conglobate pattern.
[target.'cfg(target_os = "linux")'.dependencies]
# device-mapper ioctl declarations for the vendored `dm` module (src/dm/uapi.rs).
iocuddle = "0.2"
thiserror = { workspace = true }
zerocopy = { workspace = true }

[dev-dependencies]
serial_test = { version = "3", default-features = false }
tempfile = { workspace = true }
